--- a/tests/linux_testbox.yml
+++ b/tests/linux_testbox.yml
@@ -40,6 +40,15 @@
         service_list: "{{ service_names[ansible_os_family] | default({}) }}"
 
   tasks:
+    - name: Update package manager cache (Debian)
+      ansible.builtin.apt:
+        update_cache: true
+      when: ansible_os_family == "Debian"
+    - name: Update package manager cache (RHEL)
+      ansible.builtin.dnf:
+        update_cache: true
+      when: ansible_os_family == "RedHat"
+
     - name: Install services
       ansible.builtin.package:
         name: "{{ package_list[item] }}"
