--- a/tests/linux_testbox.yml
+++ b/tests/linux_testbox.yml
@@ -248,6 +248,17 @@
       when: ansible_distribution == "Rocky"
       tags: postgres_config
 
+    - name: Samba configuration
+      ansible.builtin.blockinfile:
+        block: |
+          [sambashare]
+            comment = Samba on CCDC home folder
+            path = /home/ccdc
+            read only = no
+            browsable = yes
+        path: /etc/samba/smb.conf
+      tags: smb_config
+
     - name: Enable and (re)start services (general)
       ansible.builtin.service:
         name: "{{ item }}"
